# shroom_boom

./: .gitignore  Cargo.toml  README.md  bundle.sh
assets/: config.toml
assets/art/: Icon.aseprite
assets/art/__junkyard/: old_tonic.aseprite  old_water.aseprite
assets/art/boss/: HealthBar.aseprite  Shroom-Sheet.aseprite  Shroom.aseprite
assets/art/enemies/: Dandelion-Sheet.aseprite  Dandelion.aseprite  Flower-Sheet.aseprite  (+8 more)
assets/fonts/: FutilePro.kttf  PixelFont.kttf
assets/icon/: Icon.aseprite  Icon.icns
assets/levels/: TutorialText.aseprite  level_01.ldtk  levels.ldtk  test_level.ldtk
assets/slime/: slimebounce1.ase
src/: assets.rs  camera.rs  common.rs  entity_states.rs  entry.rs  input.rs  interact.rs  lib.rs  main.rs  state.rs  util.rs
src/anim/: map.rs  mod.rs
src/attack/: components.rs  events.rs  hurt.rs  melee.rs  mod.rs  projectile.rs
src/bossfight/: anim.rs  config.rs  consts.rs  enraged.rs  mod.rs  stage.rs  state_machine.rs  summon.rs  util.rs  vulnerable.rs
src/coin/: coin.rs  drops.rs  mod.rs  pickup.rs  state_machine.rs
src/combat/: collision.rs  components.rs  consts.rs  death.rs  events.rs  explosion.rs  hurt.rs  knockbacks.rs  melee.rs  mod.rs  projectile.rs  spore_cloud.rs
src/enemies/: anim.rs  mod.rs  spawner.rs  stats.rs
src/fx/: indicator.rs  mod.rs  shake.rs  smoke.rs  spore.rs
src/level/: boss.rs  consts.rs  coord.rs  door.rs  enemies.rs  exit.rs  mod.rs  one_way.rs  shop.rs  solid.rs  transition.rs  tutorial.rs  util.rs
src/pathfind/: crawl.rs  fly.rs  grid.rs  knockbacks.rs  melee.rs  mod.rs  patrol.rs  ranged.rs  util.rs  walk.rs
src/player/: ammo.rs  anim.rs  consts.rs  logic.rs  mod.rs  skill.rs  state_machine.rs  triggers.rs
src/shop/: info.rs  mod.rs  purchase.rs  stock.rs
src/ui/: bossbar.rs  event_handlers.rs  hud.rs  lose.rs  menu.rs  mod.rs  pause.rs  shop.rs  shop_button.rs  style.rs  ui.rs  win.rs
(+77 files in other folders)
