[package]
name = "shroom_boom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.9"
features = ["dynamic"]

[dependencies]
rand = "0.8.5"
bitflags = "1.3.2"
pathfinding = "4.1.1"
bevy_egui = "0.17.1"
bevy_easings = "0.9.0"
seldom_state = "0.3.0"
bevy_ecs_ldtk = "0.5.0"
bevy_rapier2d = "0.19.0"
bevy-inspector-egui = "0.14.0"
leafwing-input-manager = "0.7.0"
bevy_mod_debug_console = "0.1.0"
bevy-debug-text-overlay = "4.0.1"
